fixed stop bug, loading icon

--- a/static/youtupi.html
+++ b/static/youtupi.html
@@ -26,10 +26,13 @@
 						<div>
 							<ul id="playlist" data-inset="true" data-role="listview" data-theme="c" data-dividertheme="d"></ul>
 						</div>
+						<div id="spinner" class="spinner" style="display:none;">
+							<img id="img-spinner" src="images/spinner.gif" alt="Loading"/>
+						</div>
 					</div>
 				</div>
 				<div>	
-					<div data-role="collapsible" data-collapsed="false" data-theme="b" data-content-theme="d">
+					<div id="search" data-role="collapsible" data-collapsed="false" data-theme="b" data-content-theme="d">
 						<h3>Search</h3>
 						<input type="search" name="search" id="search-basic" value="" />
 						<ul id="results" data-inset="true" data-role="listview"></ul>
