--- a/static/youtupi.html
+++ b/static/youtupi.html
@@ -17,7 +17,7 @@
 			<div data-role="content">
 				<div data-role="controlgroup" data-type="horizontal" >
 					<a href="#" onclick="playerAction('play');return false" data-role="button" data-icon="forward">Next</a>
-					<a href="#" onclick="playerAction('pause');return false" data-role="button" data-icon="refresh">Pause/Resume</a>
+					<a href="#" onclick="playerAction('pause');return false" title="Pause/Resume" data-role="button">||</a>
 					<a href="#" onclick="playerAction('stop');return false" data-role="button" data-icon="delete">Stop</a>
 				</div>
 				<div>
