server url from location

--- a/static/youtupi.html
+++ b/static/youtupi.html
@@ -43,7 +43,7 @@
 						<h3>Settings</h3>
 						<div data-role="fieldcontain">
 							<label for="server">Server URL:</label>
-							<input type="text" name="server" id="server" value="http://192.168.1.2:8080"  />
+							<input type="text" name="server" id="server" value=""  />
 							<label for="quality">Video quality:</label>
 							<select name="select-choice-1" id="quality">
 								<option value="default">Default quality</option>
