fixed tab onready bug

--- a/static/index.html
+++ b/static/index.html
@@ -32,20 +32,18 @@
                     <div data-role="navbar">
                         <ul>
                             <li><a href="#one" class="ui-btn-active ui-state-persist"><h2>Playlist</h2></a></li>
-                            <li><a href="#two"><h2>Youtube</h2></a></li>
+                            <li><a href="#youtube"><h2>Youtube</h2></a></li>
                             <li><a href="#three"><h2>Files</h2></a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
-        <div data-role="page" id="two">
+        <div data-role="page" id="youtube">
             <div data-role="content">
                 <div data-role="collapsible" data-collapsed="true">
                     <h3>Settings</h3>
                     <div data-role="fieldcontain">
-                        <label for="server">Server URL:</label>
-                        <input type="text" name="server" id="server" value=""  />
                         <label for="quality">Video quality:</label>
                         <select name="select-choice-1" id="quality">
                             <option value="default">Default quality</option>
@@ -66,7 +64,7 @@
                     <div data-role="navbar">
                         <ul>
                             <li><a href="#one"><h2>Playlist</h2></a></li>
-                            <li><a href="#two" class="ui-btn-active ui-state-persist"><h2>Youtube</h2></a></li>
+                            <li><a href="#youtube" class="ui-btn-active ui-state-persist"><h2>Youtube</h2></a></li>
                             <li><a href="#three"><h2>Files</h2></a></li>
                         </ul>
                     </div>
@@ -83,7 +81,7 @@
                     <div data-role="navbar">
                         <ul>
                             <li><a href="#one"><h2>Playlist</h2></a></li>
-                            <li><a href="#two"><h2>Youtube</h2></a></li>
+                            <li><a href="#youtube"><h2>Youtube</h2></a></li>
                             <li><a href="#three" class="ui-btn-active ui-state-persist"><h2>Files</h2></a></li>
                         </ul>
                     </div>
