--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,16 @@
     </head>
     <body>
         <div data-role="page" id="playlist">
+            <div data-role="header">
+                <h1>YouTuPi</h1>
+                <div data-role="navbar">
+                    <ul>
+                        <li><a href="#playlist" data-theme="b" class="link-playlist">Playlist</a></li>
+                        <li><a href="#youtube">Youtube</a></li>
+                        <li><a href="#files">Files</a></li>
+                    </ul>
+                </div>
+            </div>
             <div data-role="content">
                 <div data-role="controlgroup" data-type="horizontal" >
                     <a href="#" onclick="playerAction('play');return false" data-role="button" data-icon="forward">Next</a>
@@ -28,20 +38,21 @@
                         </div>
                     </div>
                 </div>
-                <div data-role="footer" data-position="fixed" data-id="myfooter" class="ui-bar">
-                    <div data-role="navbar">
-                        <ul>
-                            <li><a href="#playlist" class="ui-btn-active ui-state-persist link-playlist"><h2>Playlist</h2></a></li>
-                            <li><a href="#youtube"><h2>Youtube</h2></a></li>
-                            <li><a href="#files"><h2>Files</h2></a></li>
-                        </ul>
-                    </div>
-                </div>
             </div>
         </div>
         <div data-role="page" id="youtube">
+            <div data-role="header">
+                <h1>YouTuPi</h1>
+                <div data-role="navbar">
+                    <ul>
+                        <li><a href="#playlist" class="link-playlist">Playlist</a></li>
+                        <li><a href="#youtube" data-theme="b">Youtube</a></li>
+                        <li><a href="#files">Files</a></li>
+                    </ul>
+                </div>
+            </div>
             <div data-role="content">
-                <div data-role="collapsible" data-collapsed="true">
+                <div data-role="collapsible" data-collapsed="true" data-content-theme="c">
                     <h3>Settings</h3>
                     <div data-role="fieldcontain">
                         <label for="quality">Video quality:</label>
@@ -56,36 +67,27 @@
                     </div>
                 </div>
                 <div id="search">
-                    <h3>Search</h3>
                     <input type="search" name="search" id="search-basic" value="" />
                     <ul id="results" data-inset="true" data-role="listview" data-filter="true" data-split-icon="gear"></ul>
-                </div>
-                <div data-role="footer" data-position="fixed" data-id="myfooter" class="ui-bar">
-                    <div data-role="navbar">
-                        <ul>
-                            <li><a href="#playlist" class="link-playlist"><h2>Playlist</h2></a></li>
-                            <li><a href="#youtube" class="ui-btn-active ui-state-persist"><h2>Youtube</h2></a></li>
-                            <li><a href="#files"><h2>Files</h2></a></li>
-                        </ul>
-                    </div>
                 </div>
             </div>
         </div>
         <div data-role="page" id="files">
-            <div data-role="content">
-                <div id="files">
-                    <h3>Files</h3>
-                    <ul id="filelist" data-inset="true" data-role="listview" data-filter="true" data-split-icon="gear"></ul>
+             <div data-role="header">
+                <h1>YouTuPi</h1>
+                <div data-role="navbar">
+                    <ul>
+                        <li><a href="#playlist" class="link-playlist">Playlist</a></li>
+                        <li><a href="#youtube">Youtube</a></li>
+                        <li><a href="#files" data-theme="b">Files</a></li>
+                    </ul>
                 </div>
-                <div data-role="footer" data-position="fixed" data-id="myfooter" class="ui-bar">
-                    <div data-role="navbar">
-                        <ul>
-                            <li><a href="#playlist" class="link-playlist"><h2>Playlist</h2></a></li>
-                            <li><a href="#youtube"><h2>Youtube</h2></a></li>
-                            <li><a href="#files" class="ui-btn-active ui-state-persist"><h2>Files</h2></a></li>
-                        </ul>
-                    </div>
-                </div>
+             </div>
+             <div data-role="content">
+                 <div id="files">
+                     <ul id="filelist" data-inset="true" data-role="listview" data-filter="true" data-split-icon="gear"></ul>
+                 </div>
+             </div>
             </div>
         </div>
     </body>
