spinner for loading files

--- a/static/index.html
+++ b/static/index.html
@@ -90,6 +90,9 @@
              <div data-role="content">
                  <div id="files">
                      <ul id="filelist" data-inset="true" data-role="listview" data-filter="true"></ul>
+                     <div id="spinner-files" class="spinner" style="display:none;">
+                        <img src="images/spinner.gif" alt="Loading"/>
+                     </div>
                  </div>
              </div>
             </div>
