removed deprecated filter

--- a/static/index.html
+++ b/static/index.html
@@ -75,7 +75,7 @@
 				</div>
 				<div id="search">
 					<input type="search" name="search" id="search-basic" value="" />
-					<ul id="results" data-inset="true" data-role="listview" data-filter="true"></ul>
+					<ul id="results" data-inset="true" data-role="listview"></ul>
 					<div id="spinner-search" class="spinner" style="display:none;">
 						<img src="images/spinner.gif" alt="Loading"/>
 					</div>
