--- a/static/index.html
+++ b/static/index.html
@@ -79,10 +79,8 @@
 					<div class="ui-body ui-body-c">
 						<label for="quality">Video quality:</label>
 						<select name="select-choice-1" id="quality">
-							<option value="default">Default quality</option>
-							<option value="18">MP4 360p</option>
-							<option value="22" selected="selected">MP4 720p</option>
-							<option value="37">MP4 1080p</option>
+							<option value="low">Low quality</option>
+							<option value="high" selected="selected">High quality</option>
 						</select>
 						<label for="slider">Show # results:</label>
 						<input type="range" name="slider" id="slider" value="25" min="10" max="50"  />
