--- a/static/index.html
+++ b/static/index.html
@@ -34,6 +34,7 @@
 					<h3>No entries in the playlist</h3>
 				</div>
 				<div id="playlist-playing" style="display:none;">
+					<input type="range" name="position" id="position" value="0" min="0" max="100" step="10" data-highlight="true" class="ui-hidden-accessible">
 					<h3>Now Playing</h3>
 					<div>
 						<ul id="playlist-list" data-inset="true" data-role="listview"></ul>
