--- a/static/index.html
+++ b/static/index.html
@@ -104,6 +104,12 @@
 						</select>
 						<label for="slider">Show # results:</label>
 						<input type="range" name="slider" id="slider" value="25" min="10" max="50"  />
+						<label for="save-history">Store loaded items in history:</label>
+						<select name="save-history" id="save-history" data-role="slider">
+							<option value="off">Off</option>
+							<option value="on">On</option>
+						</select>
+						<a href="#" data-role="button" data-icon="delete" title="Clear History" id="clear-history-button">Clear history</a>
 					</div>
 				</div>
 			</div>
