history enabled by default refs #21

--- a/static/index.html
+++ b/static/index.html
@@ -107,7 +107,7 @@
 						<label for="save-history">Store loaded items in history:</label>
 						<select name="save-history" id="save-history" data-role="slider">
 							<option value="off">Off</option>
-							<option value="on">On</option>
+							<option value="on" selected="selected">On</option>
 						</select>
 						<a href="#" data-role="button" data-icon="delete" title="Clear History" id="clear-history-button">Clear history</a>
 					</div>
