--- a/static/index.html
+++ b/static/index.html
@@ -91,6 +91,10 @@
 					<div id="spinner-search" class="spinner" style="display:none;">
 						<img src="images/spinner.gif" alt="Loading"/>
 					</div>
+					<div id="results-end-controls" data-role="controlgroup" data-type="horizontal"  style="display:none;">
+						<a href="#" data-role="button" data-icon="plus" id="add-all-button">Add all</a>
+						<a href="#" data-role="button" data-icon="refresh" id="add-all-random-button">Add all with random order</a>
+					</div>
 				</div>
 				<div data-role="popup" data-overlay-theme="a" data-content-theme="c" id="settings" class="ui-content">
 				 	<a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-left">Close</a>
