--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,8 @@
 		<link rel="stylesheet" href="jquery.mobile.simpledialog.min.css" />
 		<link rel="stylesheet" href="youtupi.css" />
 		<script src="jquery-1.8.2.min.js"></script>
+		<script src="jquery.ui-1.9.1.min.js"></script>
+		<script src="jquery.ui.touch-punch.min.js"></script>
 		<script src="jquery.json-2.4.min.js"></script>
 		<script src="jquery.mobile-1.3.1.min.js"></script>
 		<script src="jquery.mobile.simpledialog2.min.js"></script>
