kickasstorrents module with peerflix

--- a/static/index.html
+++ b/static/index.html
@@ -82,6 +82,7 @@
 							<select name="select-choice-0" id="engine">
 								<option value="youtube" selected="selected">Youtube</option>
 								<option value="local">Local files</option>
+								<option value="kat">KickassTorrents</option>
 							</select>
 						</div>
 						<div class="ui-block-b">
