integrated ce151dca3c97f5182befccd072ffa1fafdac3d99

--- a/static/index.html
+++ b/static/index.html
@@ -44,6 +44,13 @@
 								<option value="on">On</option>
 							</select>
 						</div>
+						<div id="seek-controls" data-role="controlgroup" data-type="horizontal" >
+							<a href="#" data-role="button" title="seek back 10m" id="seekbacklarge-button">&lt;&lt;</a>
+							<a href="#" data-role="button" title="seek back 30s" id="seekbacksmall-button">&lt;</a>
+							<a href="#" data-role="button" title="Pause/Resume" id="pause-button2">||</a>
+							<a href="#" data-role="button" title="seek forward 30s" id="seekforwardsmall-button">&gt;</a>
+							<a href="#" data-role="button" title="seek forward 10m" id="seekforwardlarge-button">&gt;&gt;</a>
+						</div>
 						<div>
 							<label for="position">Video position:</label>
 							<input type="range" name="position" id="position" value="0" min="0" max="100" step="10" data-highlight="true" class="ui-hidden-accessible">
