--- a/static/index.html
+++ b/static/index.html
@@ -59,7 +59,14 @@
 						</fieldset>
 						<div>
 							<label for="position">Video position:</label>
-							<input type="range" name="position" id="position" value="0" min="0" max="100" step="10" data-highlight="true" class="ui-hidden-accessible">
+							<input type="range" name="position" id="position" value="0" min="0" max="100" step="3" data-highlight="true" class="ui-hidden-accessible">
+						</div>
+						<div id="seek-controls" data-role="controlgroup" data-type="horizontal" >
+                                                        <a href="#" data-role="button" title="seek back 10m" id="seekbacklarge-button">&lt;&lt;</a>
+                                                        <a href="#" data-role="button" title="seek back 30s" id="seekbacksmall-button">&lt;</a>
+							<a href="#" data-role="button" title="Pause/Resume" id="pause-button2">||</a>
+                                                        <a href="#" data-role="button" title="seek forward 30s" id="seekforwardsmall-button">&gt;</a>
+                                                        <a href="#" data-role="button" title="seek forward 10m" id="seekforwardlarge-button">&gt;&gt;</a>
 						</div>
 					</div>
 				</div>
