Added Audio Track Controls to player (only omxplayer engine functional)

--- a/static/index.html
+++ b/static/index.html
@@ -68,6 +68,10 @@
                                                         <a href="#" data-role="button" title="seek forward 30s" id="seekforwardsmall-button">&gt;</a>
                                                         <a href="#" data-role="button" title="seek forward 10m" id="seekforwardlarge-button">&gt;&gt;</a>
 						</div>
+						<div id="audiotrack-controls" data-role="controlgroup" data-type="horizontal" >
+                                                        <a href="#" data-role="button" title="Previous Audio Track" id="prevaudiotrack-button">Prev Audio Track</a>
+                                                        <a href="#" data-role="button" title="Next Audio Track" id="nextaudiotrack-button">Next Audio Track</a>
+						</div>
 					</div>
 				</div>
 			</div>
