--- a/static/index.html
+++ b/static/index.html
@@ -49,14 +49,10 @@
 				 	<a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-left">Close</a>
 					<h3>Player Control</h3>
 					<div class="ui-body ui-body-c">
-						<fieldset class="ui-grid-a">
-							<div class="ui-block-a">
-								<a href="#" data-role="button" data-icon="plus" title="Volume up" id="volup-button">Volume up</a>
-							</div>
-							<div class="ui-block-b">
-								<a href="#" data-role="button" data-icon="minus" title="Volume down" id="voldown-button">Volume down</a>
-							</div>
-						</fieldset>
+						<div id="volume-controls" data-role="controlgroup" data-type="horizontal" >
+							<a href="#" data-role="button" data-icon="minus" title="Volume down" id="voldown-button">Volume down</a>
+							<a href="#" data-role="button" data-icon="plus" data-iconpos="right" title="Volume up" id="volup-button">Volume up</a>
+						</div>
 						<div>
 							<label for="position">Video position:</label>
 							<input type="range" name="position" id="position" value="0" min="0" max="100" step="3" data-highlight="true" class="ui-hidden-accessible">
@@ -69,8 +65,8 @@
                                                         <a href="#" data-role="button" title="seek forward 10m" id="seekforwardlarge-button">&gt;&gt;</a>
 						</div>
 						<div id="audiotrack-controls" data-role="controlgroup" data-type="horizontal" >
-                                                        <a href="#" data-role="button" title="Previous Audio Track" id="prevaudiotrack-button">Prev Audio Track</a>
-                                                        <a href="#" data-role="button" title="Next Audio Track" id="nextaudiotrack-button">Next Audio Track</a>
+                                                        <a href="#" data-role="button" data-icon="arrow-l" title="Previous Audio Track" id="prevaudiotrack-button">Prev Audio Track</a>
+                                                        <a href="#" data-role="button" data-icon="arrow-r" data-iconpos="right" title="Next Audio Track" id="nextaudiotrack-button">Next Audio Track</a>
 						</div>
 					</div>
 				</div>
